# local-llm

./: .envrc  .gitignore  .pre-commit-config.yaml  AI-MONITOR-V2.1-DEPLOYMENT-REPORT.md  ARCHITECTURE.md  CCIS_ONE_PAGER.md  CCIS_TECHNICAL_SPECIFICATION.md  CLAUDE_CODE_INTEGRATION_GUIDE.md  CLAUDE_CODE_INTEGRATION_PROJECT.md  COMPREHENSIVE-DIAGNOSIS-REPORT.md  CONTRIBUTING.md  CONTROL_CENTER_COMPLETE.md  CONTROL_CENTER_README.md  CONTROL_PANEL_UI_README.md  DEPLOYMENT-COMPLETE-100.md  Dockerfile  F5_ISSUE_SOLVED.md  F5_KEY_ISSUE_REPORT.md  KIRO_EXECUTE_NIX.md  NIX_DEPLOYMENT_GUIDE.md  NIX_DEPLOYMENT_SUMMARY.md  PROJECT_OPTIMIZATION_DEPLOYMENT_REPORT.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  SYSTEM_ARCHITECTURE.md  WEB_UI_CONTROL_PANEL_COMPLETE.md  ai-monitor-agent-implementation.py  ai-monitor-api-implementation.py  ai-monitor-config-files.txt  ai-monitor-jwt-handler.py  ai-monitor-models.py  ai-monitor-ollama-client.py  ai-monitor-project-structure.md  ai-monitor-router-implementation.py  ai-monitor-rules-engine.py  ai-monitor-scaffold-generator.py  ai-monitor-setup-scripts.sh  ai-monitor-test-validation.py  ai-monitor-tts-service.py  (+1579 more)
.github/workflows/: ci.yml
.kiro/specs/project-optimization/: design.md  requirements.md  tasks.md
ai-monitor/: SECURITY_AUDIT_REPORT.md  requirements.txt  start_services.sh
ai-monitor-v2/: .coveragerc  pytest.ini  stop_services.sh
ai-monitor-v2/core/: main.py
ai-monitor-v2/performance/go/: go.mod
ai-monitor-v2/performance/rust/: Cargo.toml
ai-monitor-v2/performance/rust/src/: main.rs
ai-monitor-v2/tests/: __init__.py
ai-monitor-v2/tests/integration/: __init__.py
ai-monitor-v2/tests/performance/: __init__.py  test_performance.py
ai-monitor-v2/tests/unit/: __init__.py  test_api_endpoints.py
ai-monitor/core/: main.py
ai-monitor/legacy_components/auth/: jwt.py
ai-monitor/legacy_components/gui/: control_panel_server.py  main.py
ai-monitor/legacy_components/scaffold/: claude_helper.py
ai-monitor/performance/go/: main.go
ai-monitor/performance/rust/: Cargo.toml
ai-monitor/performance/rust/src/: main.rs
ai-monitor/tests/: conftest.py
ai-monitor/tests/integration/: test_api_integration.py
ai-monitor/tests/unit/: test_core.py
ai_monitor/: __init__.py
ai_monitor/core/: __init__.py
backup/: control_center.sh  docker-compose.yml  pyproject.toml  requirements.txt
claude_code/: __init__.py  claude_simulator.py
claude_code/mcp_tools/: __init__.py  executor.py
deployment-config/: DEPLOYMENT-GUIDE.md  README.md  VALIDATION-REPORT.md  agent-framework-intent.yaml  agent-framework-test.yaml  ai-monitor-v2.1-deployment.yaml  architecture-compliance.yaml  environment-config.yaml  validation-checklist.yaml
deployment-config/scripts/: auto_format.sh  auto_review.sh  notify_handler.sh  plan_gatekeeper.sh  pre_plan_gatekeeper.sh  work_summary.sh
scripts/: ai-monitor-architecture.html  install_launcher.sh  install_mcp.sh
