[tool.poetry]
name = "ai_monitor"
version = "2.2.0"
description = "Local AI Monitor System with unified architecture and Claude Code integration"
authors = ["Claude Code Assistant <claude@anthropic.com>"]
packages = [{include = "ai_monitor", from = "."}]

[tool.poetry.dependencies]
python = "^3.12"
# Core framework - Latest 2025 versions
fastapi = "^0.116.1"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
uvloop = "^0.21.0"

# HTTP clients
httpx = "^0.27.0"
aiohttp = "^3.10.10"

# Databases - 使用兼容Python 3.13的版本
# asyncpg = "^0.29.0"  # 暂时移除，Python 3.13兼容性问题
aioredis = "^2.0.1"

# Monitoring and metrics
prometheus-client = "^0.21.0"
psutil = "^6.1.0"

# Security and auth
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.17"

# AI and ML libraries
ollama = "^0.2.0"
weaviate-client = "^4.5.2"
numpy = "^1.26.4"

# Utilities
python-dotenv = "^1.0.1"
click = "^8.1.7"
loguru = "^0.7.2"
GitPython = "^3.1.43"

# OpenTelemetry - 移除暂时不兼容的包
# opentelemetry-api = "^1.24.0"
# opentelemetry-sdk = "^1.24.0"
# opentelemetry-exporter-prometheus = "^1.12.0"
# opentelemetry-instrumentation-fastapi = "^0.45b0"
# opentelemetry-instrumentation-httpx = "^0.45b0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
ruff = "^0.4.1"
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.8.0"

[tool.poetry.group.test.dependencies]
httpx = "^0.27.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["S101", "S608", "S603"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004", "SLF001"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["ai_monitor"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

