[tool.poetry]
name = "ai_monitor"
version = "2.2.0"
description = "Local AI Monitor System with updated tech stack"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.7.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["argon2"], version = "^1.7.4"}
httpx = "^0.27.0"
ollama = "^0.2.0"
weaviate-client = "^4.5.2"
numpy = "^1.26.4"
loguru = "^0.7.2"
redis = "^5.0.4"
GitPython = "^3.1.43"
prometheus-client = "^0.20.0"
psutil = "^5.9.8"
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-exporter-prometheus = "^1.25.0"
opentelemetry-instrumentation-fastapi = "^0.46b0"
opentelemetry-instrumentation-httpx = "^0.46b0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api" [tool.poetry.packages]
include = "ai_monitor"

